tests/baselines/reference/typesWithPrivateConstructor.errors.txt
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(6,9): error TS2673: Constructor of type '(): C' is private and only accessible within class 'C'.
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(14,10): error TS2673: Constructor of type '(x: number): C2' is private and only accessible within class 'C2'.


==== tests/cases/conformance/types/members/typesWithPrivateConstructor.ts (2 errors) ====
    
    class C {
        private constructor() { }
    }
    
    var c = new C(); // error C is private
            ~~~~~~~
!!! error TS2673: Constructor of type '(): C' is private and only accessible within class 'C'.
    var r: () => void = c.constructor;
    
    class C2 {
        private constructor(x: number);
        private constructor(x: any) { }
    }
    
    var c2 = new C2(); // error C2 is private
             ~~~~~~~~
!!! error TS2673: Constructor of type '(x: number): C2' is private and only accessible within class 'C2'.
    var r2: (x: number) => void = c2.constructor;